filters for arm

--- a/src/plugins/intel_cpu/tests/functional/CMakeLists.txt
+++ b/src/plugins/intel_cpu/tests/functional/CMakeLists.txt
@@ -22,7 +22,8 @@ endif()
 if(NOT (ARM OR AARCH64))
     list(APPEND EXCLUDED_SOURCE_PATHS
         ${CMAKE_CURRENT_SOURCE_DIR}/single_layer_tests/instances/arm
-        ${CMAKE_CURRENT_SOURCE_DIR}/subgraph_tests/src/arm)
+        ${CMAKE_CURRENT_SOURCE_DIR}/subgraph_tests/src/arm
+        ${CMAKE_CURRENT_SOURCE_DIR}/test_utils/arm)
 else()
     # temporary disable all custom tests for ARM
     list(APPEND EXCLUDED_SOURCE_PATHS
@@ -41,7 +42,8 @@ endif()
 if(NOT X86_64)
     list(APPEND EXCLUDED_SOURCE_PATHS
          ${CMAKE_CURRENT_SOURCE_DIR}/single_layer_tests/instances/x64
-         ${CMAKE_CURRENT_SOURCE_DIR}/subgraph_tests/src/x64)
+         ${CMAKE_CURRENT_SOURCE_DIR}/subgraph_tests/src/x64
+        ${CMAKE_CURRENT_SOURCE_DIR}/test_utils/x64)
 endif()
 
 addIeTargetTest(
