--- a/.github/workflows/linux_cuda.yml
+++ b/.github/workflows/linux_cuda.yml
@@ -32,7 +32,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-16-cores
     container:
-      image: nvidia/cuda:11.8.0-runtime-ubuntu20.04
+      image: openvinogithubactions.azurecr.io/dockerhub/nvidia/cuda:11.8.0-runtime-ubuntu20.04
       volumes:
         - /mount/caches:/mount/caches
     env:
