--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -314,21 +314,21 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Build cpp samples - GCC
-        run: ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples
+        run: ${{ env.INSTALL_DIR }}/samples/cpp/build_samples.sh -i ${{ env.INSTALL_DIR }} -b ${BUILD_DIR}/cpp_samples
         env:
           CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
 
       - name: Build cpp samples - Clang
         run: |
           apt-get install -y clang
-          ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples_clang
+          ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${{ env.INSTALL_DIR }} -b ${BUILD_DIR}/cpp_samples_clang
         env:
           CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
           CC: clang
           CXX: clang++
 
       - name: Build c samples
-        run: ${INSTALL_DIR}/samples/c/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/c_samples
+        run: ${INSTALL_DIR}/samples/c/build_samples.sh -i ${{ env.INSTALL_DIR }} -b ${BUILD_DIR}/c_samples
         env:
           CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
 
@@ -338,9 +338,9 @@ jobs:
 
       - name: Samples tests
         run: |
-          export WORKSPACE=${INSTALL_DIR}
-          export IE_APP_PATH=${INSTALL_DIR}/samples_bin
-          export IE_APP_PYTHON_PATH=${INSTALL_DIR}/samples/python
+          export WORKSPACE=${{ env.INSTALL_DIR }}
+          export IE_APP_PATH=${{ env.INSTALL_DIR }}/samples_bin
+          export IE_APP_PYTHON_PATH=${{ env.INSTALL_DIR }}/samples/python
           export SHARE=${INSTALL_TEST_DIR}/smoke_tests/samples_smoke_tests_data
 
           python3 -m pip install --ignore-installed PyYAML -r ${INSTALL_TEST_DIR}/smoke_tests/requirements.txt
