rm unused dir; add docs

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -410,14 +410,13 @@ jobs:
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
       CONFORMANCE_TOOLS_DIR: ${{ github.workspace }}/install/tests/functional_test_utils/layer_tests_summary
       CONFORMANCE_ARTIFACTS_DIR: ${{ github.workspace }}/install/conformance_artifacts
-      CONFORMANCE_CACHE_DIR: ${{ github.workspace }}/install/conformance_cache
       TEST_DEVICE: 'CPU'
 
     steps:
 
       - name: Create Directories
         run: |
-          mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR} ${CONFORMANCE_ARTIFACTS_DIR} ${CONFORMANCE_CACHE_DIR}
+          mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR} ${CONFORMANCE_ARTIFACTS_DIR}
 
       #
       # Dependencies
