--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -891,7 +891,9 @@ jobs:
 
       - name: nGraph and IE Python Bindings and Python API 2.0 Tests
         run: |
+          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
           source ${INSTALL_DIR}/setupvars.sh
+          export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
           python3 -m pytest -n logical --dist loadfile -sv \
             ${INSTALL_TEST_DIR}/pyngraph ${INSTALL_TEST_DIR}/pyopenvino ${{ env.PYTHON_STATIC_ARGS }} \
             --junitxml=${INSTALL_TEST_DIR}/TEST-python_unit.xml \
@@ -900,9 +902,6 @@ jobs:
             --ignore=${INSTALL_TEST_DIR}/pyopenvino/tests/test_utils/test_utils.py \
             --ignore=${INSTALL_TEST_DIR}/pyopenvino/tests/test_onnx/test_zoo_models.py \
             --ignore=${INSTALL_TEST_DIR}/pyopenvino/tests/test_onnx/test_backend.py
-        env:
-          LD_LIBRARY_PATH: ${{ env.INSTALL_TEST_DIR }}:$LD_LIBRARY_PATH
-          PYTHONPATH: ${{ env. INSTALL_TEST_DIR }}:$PYTHONPATH
 
       - name: Docs Python snippets
         run: |
