--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,6 +19,7 @@ on:
       - '**/conformance/**'
     branches:
       - master
+      - 'releases/**'
 
 concurrency:
   # github.ref is not unique in post-commit
@@ -124,7 +125,7 @@ jobs:
           max-size: "2000M"
           # Should save cache only if run in the master branch of the base repo
           # github.ref_name is 'ref/PR_#' in case of the PR, and 'branch_name' when executed on push
-          save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
+          # save: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
           append-timestamp: true
           key: ${{ github.job }}-${{ runner.os }}-common
           restore-keys: |
@@ -716,6 +717,7 @@ jobs:
         with:
           name: test-results-functional-cpu
           path: |
+            ${{ env.INSTALL_TEST_DIR }}/*.lst
             ${{ env.INSTALL_TEST_DIR }}/temp/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/failed/*.log
             ${{ env.INSTALL_TEST_DIR }}/logs/crashed/*.log
