--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,6 +34,32 @@ env:
   PYTHON_VERSION: '3.11'
 
 jobs:
+  Smart_CI:
+    runs-on: ubuntu-latest
+      outputs:
+        all_components: "${{ steps.smart_ci.outputs.all_components }}"
+        affected_components: "${{ steps.smart_ci.outputs.affected_components }}"
+      steps:
+        - name: checkout action
+          uses: actions/checkout@v4
+          with:
+            sparse-checkout: .github/actions/smart-ci
+
+        - name: Get affected components
+          id: smart_ci
+          uses: ./.github/actions/smart-ci
+          with:
+            repository: ${{ github.repository }}
+            pr: ${{ github.event.pull_request.number }}
+            commit_sha: ${{ github.sha }}
+            component_pattern: "category: (.*)"
+            repo_token: ${{ secrets.GITHUB_TOKEN }}
+
+        - name: Show affected components
+          run: |
+            echo "${{ toJSON(steps.smart_ci.outputs.affected_components) }}"
+          shell: bash
+
   Build:
     defaults:
       run:
@@ -280,7 +306,7 @@ jobs:
           ovc --help
 
   Samples:
-    needs: Build
+    needs: Build, Smart_CI
     defaults:
       run:
         shell: bash
@@ -292,6 +318,8 @@ jobs:
       INSTALL_DIR: /__w/openvino/openvino/install
       INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
       BUILD_DIR: /__w/openvino/openvino/build
+    if: "!fromJSON(needs.smart_ci.outputs.all_components).samples || 
+         fromJSON(needs.smart_ci.outputs.affected_components).samples"
 
     steps:
       - name: Create Directories
@@ -361,6 +389,7 @@ jobs:
       #
 
       - name: Samples tests
+        if: fromJSON(needs.smart_ci.outputs.affected_components).samples.test
         run: |
           export WORKSPACE=${INSTALL_DIR}
           export IE_APP_PATH=${INSTALL_DIR}/samples_bin
@@ -378,7 +407,7 @@ jobs:
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && fromJSON(needs.smart_ci.outputs.affected_components).samples.test }}
         with:
           name: test-results-cpp
           path: ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
@@ -578,6 +607,8 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-InferenceUnit.xml
 
       - name: Low Precision Transformations Tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).LP_transformations || 
+             fromJSON(needs.smart_ci.outputs.affected_components).LP_transformations.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_lp_transformations_tests --gtest_print_time=1 \
@@ -590,6 +621,8 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ConditionalCompilation.xml
 
       - name: IR frontend tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).IR_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).IR_FE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_ir_frontend_tests --gtest_print_time=1 \
@@ -603,6 +636,8 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-PaddleTests.xml
 
       - name: ONNX frontend tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).ONNX_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).ONNX_FE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_onnx_frontend_tests --gtest_print_time=1 \
@@ -610,24 +645,32 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ONNXFrontend.xml
 
       - name: TensorFlow Common frontend tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_tensorflow_common_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-TensorFlowCommonFrontend.xml
 
       - name: TensorFlow frontend tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_tensorflow_frontend_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-TensorFlowFrontend.xml
 
       - name: TensorFlow Lite frontend tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TFL_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TFL_FE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_tensorflow_lite_frontend_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-TensorFlowLiteFrontend.xml
 
       - name: Transformations func tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).transformations || 
+             fromJSON(needs.smart_ci.outputs.affected_components).transformations.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_transformations_tests --gtest_print_time=1 \
@@ -640,24 +683,32 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-CommonUtilTests.xml
 
       - name: Snippets func tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).CPU || 
+             fromJSON(needs.smart_ci.outputs.affected_components).CPU.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_snippets_func_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-SnippetsFuncTests.xml
 
       - name: CPU plugin unit tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).CPU || 
+             fromJSON(needs.smart_ci.outputs.affected_components).CPU.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_cpu_unit_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-CPUUnitTests.xml
 
       - name: AUTO unit tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).AUTO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).AUTO.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_auto_unit_tests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ov_auto_unit_tests.xml
 
       - name: Template plugin func tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TEMPLATE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TEMPLATE.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_template_func_tests --gtest_print_time=1 \
@@ -665,18 +716,24 @@ jobs:
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-TemplateFuncTests.xml
 
       - name: Inference Engine C API tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).C_API || 
+             fromJSON(needs.smart_ci.outputs.affected_components).C_API.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/InferenceEngineCAPITests --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-InferenceEngineCAPITests.xml
 
       - name: OpenVINO C API tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).C_API || 
+             fromJSON(needs.smart_ci.outputs.affected_components).C_API.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_capi_test --gtest_print_time=1 \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-OpenVINOCAPITests.xml
 
       - name: AutoBatch func tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).AUTO_BATCH || 
+             fromJSON(needs.smart_ci.outputs.affected_components).AUTO_BATCH.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_auto_batch_func_tests --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ov_auto_batch_func_tests.xml
@@ -687,11 +744,15 @@ jobs:
           ${INSTALL_TEST_DIR}/ov_proxy_plugin_tests --gtest_print_time=1 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-OVProxyTests.xml
 
       - name: Hetero unit tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).HETERO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).HETERO.test"
         run: |
           source ${{ env.INSTALL_DIR }}/setupvars.sh
           ${{ env.INSTALL_TEST_DIR }}/ov_hetero_unit_tests --gtest_print_time=1 --gtest_output=xml:${{ env.INSTALL_TEST_DIR }}/TEST-OVHeteroUnitTests.xml
 
       - name: Hetero func tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).HETERO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).HETERO.test"
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_hetero_func_tests --gtest_print_time=1 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-OVHeteroFuncTests.xml
@@ -792,6 +853,8 @@ jobs:
             --ignore=${INSTALL_TEST_DIR}/pyngraph/tests/test_onnx/test_backend.py
 
       - name: Python API 2.0 Tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).Python_API || 
+             fromJSON(needs.smart_ci.outputs.affected_components).Python_API.test"
         run: |
           # For python imports to import 'pybind_mock_frontend'
           export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
@@ -813,6 +876,8 @@ jobs:
           python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
       - name: Model Optimizer unit tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).MO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).MO.test"
         run: |
           export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
           # required for MxNet
@@ -822,6 +887,8 @@ jobs:
               --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
 
       - name: PyTorch Layer Tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).PyTorch_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).PyTorch_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -832,6 +899,8 @@ jobs:
           TEST_PRECISION: FP16
 
       - name: TensorFlow 1 Layer Tests - TF FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -842,6 +911,8 @@ jobs:
           TEST_PRECISION: FP16
 
       - name: TensorFlow 2 Layer Tests - TF FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -852,6 +923,8 @@ jobs:
           TEST_PRECISION: FP16
 
       - name: JAX Layer Tests - TF FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -861,6 +934,8 @@ jobs:
           TEST_DEVICE: CPU
 
       - name: TensorFlow 1 Layer Tests - Legacy FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -868,6 +943,8 @@ jobs:
           python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_tests/test_tf_Roll.py --ir_version=10 --junitxml=${INSTALL_TEST_DIR}/TEST-tf_Roll.xml
 
       - name: TensorFlow 2 Layer Tests - Legacy FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -879,6 +956,8 @@ jobs:
           TEST_PRECISION: FP16
 
       - name: TensorFlow Lite Layer Tests - TFL FE
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).TFL_FE || 
+             fromJSON(needs.smart_ci.outputs.affected_components).TFL_FE.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -889,6 +968,8 @@ jobs:
           TEST_PRECISION: FP16
 
       - name: MO Python API Tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).MO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).MO.test"
         run: |
           python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
           export PYTHONPATH=${LAYER_TESTS_INSTALL_DIR}:$PYTHONPATH
@@ -911,6 +992,8 @@ jobs:
           python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/py_frontend_tests --junitxml=${INSTALL_TEST_DIR}/TEST-test_py_fontend.xml
 
       - name: OVC unit tests
+        if: "!fromJSON(needs.smart_ci.outputs.all_components).MO || 
+             fromJSON(needs.smart_ci.outputs.affected_components).MO.test"
         run: |
           # For python imports to import 'pybind_mock_frontend'
           export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
@@ -940,7 +1023,8 @@ jobs:
       INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
       PARALLEL_TEST_SCRIPT: /__w/openvino/openvino/install/tests/functional_test_utils/run_parallel.py
       PARALLEL_TEST_CACHE: /__w/openvino/openvino/install/tests/test_cache.lst
-
+    if: "!fromJSON(needs.smart_ci.outputs.all_components).CPU || 
+         fromJSON(needs.smart_ci.outputs.affected_components).CPU.test"
     steps:
       - name: Create Directories
         run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
@@ -1028,6 +1112,8 @@ jobs:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
       MODEL_HUB_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/model_hub_tests
+    if: "!fromJSON(needs.smart_ci.outputs.all_components).TF_FE || 
+         fromJSON(needs.smart_ci.outputs.affected_components).TF_FE.test"
 
     steps:
       - name: Create Directories
@@ -1105,6 +1191,8 @@ jobs:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
       MODEL_HUB_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/model_hub_tests
+    if: "!fromJSON(needs.smart_ci.outputs.all_components).PyTorch_FE || 
+         fromJSON(needs.smart_ci.outputs.affected_components).PyTorch_FE.test"
 
     steps:
       - name: Check sudo
