--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -306,7 +306,7 @@ jobs:
           ovc --help
 
   Samples:
-    needs: Build, Smart_CI
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
@@ -541,7 +541,7 @@ jobs:
         working-directory: ${{ env.ONNX_RUNTIME_BUILD_DIR }}/RelWithDebInfo/RelWithDebInfo
 
   CXX_Unit_Tests:
-    needs: Build
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
@@ -766,7 +766,7 @@ jobs:
           if-no-files-found: 'error'
 
   Python_Unit_Tests:
-    needs: Build
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
@@ -1011,7 +1011,7 @@ jobs:
           if-no-files-found: 'error'
 
   CPU_Functional_Tests:
-    needs: Build
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
@@ -1099,7 +1099,7 @@ jobs:
           if-no-files-found: 'error'
 
   TensorFlow_Hub_Models_Tests:
-    needs: Build
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
@@ -1178,7 +1178,7 @@ jobs:
           if-no-files-found: 'error'
 
   PyTorch_Models_Tests:
-    needs: Build
+    needs: [Build, Smart_CI]
     defaults:
       run:
         shell: bash
