--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1156,8 +1156,8 @@ jobs:
 
       - name: Install PyTorch tests requirements
         run: |
+          python3 -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           python3 -m pip install -r ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/requirements.txt
-          python3 -m pip install -r ${MODEL_HUB_TESTS_INSTALL_DIR}/torch_tests/requirements_secondary.txt
           echo "Available storage:"
           df -h
         env:
