--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1241,7 +1241,9 @@ jobs:
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install python dependencies
-        run: python3 -m pip install -r ${INSTALL_TEST_DIR}/bindings/python/requirements_test.txt
+        run: |
+          set +ex
+          python3 -m pip install -r ${INSTALL_TEST_DIR}/bindings/python/requirements_test.txt
 
       - name: Install Python wheels
         run: python3 -m pip install ${INSTALL_DIR}/tools/openvino-*
@@ -1324,11 +1326,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      # - name: Setup pip cache dir
-      #   run: |
-      #     PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
-      #     echo "Using pip version: ${PIP_VER}"
-      #     echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
+      - name: Setup pip cache dir
+        run: |
+          PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
+          echo "Using pip version: ${PIP_VER}"
+          echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install OpenVINO Python wheels
         run: python3 -m pip install ${INSTALL_DIR}/tools/openvino-*
